k8s/manifests/umami/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: umami
  namespace: apps
spec:
  selector:
    app: umami
  ports:
    - name: http
      port: 3000
      targetPort: http
